socket.io is started
