# startup/router.js
@@ -12,6 +12,7 @@ const try_test = require('../routers/try_test')
 const full_test = require('../routers/create_full_test')
 const files = require('../routers/files')
 const group = require('../routers/group')
+const group_member = require('../routers/group_member')
 const correct_answer = require('../routers/correct_answer')
 const errorMiddleware = require('../middleware/error')
 const options = require("../swagger.json")
@@ -31,6 +32,7 @@ module.exports = (app) => {
     app.use('/v1/fulltest', full_test);
     app.use('/v1/file', files);
     app.use('/v1/group', group);
+    app.use('/v1/group_member', group_member);
     app.use(errorMiddleware);
     app.use(
         "/api-docs",
